tests/generics_fn_type_args_bad.hop
fn id[T](x T) T {
	return x
}

fn main() {
	id[i64](1 as i64)
}
